bk_ida/gccida/c2/bitmap_clear_bit
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_clear_bit/src/bitmap.c:841:17: error: expected expression
if ( *( _OWORD *)current->bits == 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_clear_bit/src/bitmap.c:841:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)current->bits == 0LL ) 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_clear_bit/src/obj/bitmap.o] Error 1
